# Agricultural-machinery-operation-information-collection

./: .gitattributes  .mxproject  CMakeLists.txt  MYPLAY.ioc  README_VSCODE.md
0809main_try/: try_1.ui
0809main_try/astropy/: compiler_version.cp38-win_amd64.pyd
0809main_try/astropy/cosmology/: scalar_inv_efuncs.cp38-win_amd64.pyd
0809main_try/astropy/io/ascii/: cparser.cp38-win_amd64.pyd
0809main_try/astropy/io/fits/: _utils.cp38-win_amd64.pyd  compression.cp38-win_amd64.pyd
0809main_try/astropy/io/votable/: tablewriter.cp38-win_amd64.pyd
0809main_try/astropy/modeling/: _projections.cp38-win_amd64.pyd
0809main_try/astropy/stats/: _stats.cp38-win_amd64.pyd
0809main_try/astropy/table/: _column_mixins.cp38-win_amd64.pyd  _np_utils.cp38-win_amd64.pyd
0809main_try/astropy/utils/: _compiler.cp38-win_amd64.pyd
0809main_try/astropy/utils/xml/: _iterparser.cp38-win_amd64.pyd
0809main_try/astropy/wcs/: _wcs.cp38-win_amd64.pyd
0809main_try/cffi-1.14.5.dist-info/: RECORD  direct_url.json
0809main_try/coverage/: tracer.cp38-win_amd64.pyd
0809main_try/cv2/: cv2.pyd
0809main_try/erfa/: ufunc.cp38-win_amd64.pyd
0809main_try/etc/jupyter/: migrated
0809main_try/gevent-21.1.2.dist-info/: RECORD
0809main_try/greenlet-1.0.0.dist-info/: RECORD  direct_url.json
0809main_try/imagecodecs/: _shared.cp38-win_amd64.pyd
0809main_try/importlib_metadata-3.10.0.dist-info/: RECORD
0809main_try/msgpack/: _cmsgpack.cp38-win_amd64.pyd
0809main_try/numba/: _devicearray.cp38-win_amd64.pyd  _dispatcher.cp38-win_amd64.pyd  _dynfunc.cp38-win_amd64.pyd  _helperlib.cp38-win_amd64.pyd  mviewbuf.cp38-win_amd64.pyd
0809main_try/numba/core/runtime/: _nrt_python.cp38-win_amd64.pyd
0809main_try/numba/core/typeconv/: _typeconv.cp38-win_amd64.pyd
0809main_try/numba/cuda/cudadrv/: _extras.cp38-win_amd64.pyd
0809main_try/numba/experimental/jitclass/: _box.cp38-win_amd64.pyd
0809main_try/numba/np/ufunc/: _internal.cp38-win_amd64.pyd  omppool.cp38-win_amd64.pyd  tbbpool.cp38-win_amd64.pyd  workqueue.cp38-win_amd64.pyd
0809main_try/setuptools-52.0.0.post20210125-py3.8.egg-info/: PKG-INFO
0809main_try/share/jupyter/: nbsignatures.db  notebook_secret
0809main_try/share/jupyter/runtime/: kernel-01bd0f24-acb1-4703-b9b3-23c22714f4aa.json  kernel-097045da-29ec-46bc-ac66-c88649935384.json  kernel-0d8010f2-0b22-4695-b519-f23f1fc8d343.json  kernel-292b0013-83da-4d2a-a4d2-5e17cc45c9e8.json  kernel-2c58805a-fdd0-4a46-a818-5cbf9e682574.json  kernel-38bea6c8-6fa2-4e47-9d9f-8ad0accf4078.json  kernel-498df8d8-3e86-456e-b799-a9788fd58a1c.json  kernel-4cdf89ac-92d5-4704-87ba-974be0f6ab7a.json  kernel-525482ee-8a6b-43d7-b356-8042f24f397d.json  kernel-57f29bac-ded9-4177-bdd0-f5baff7b1c8d.json  kernel-69ffe75d-603d-4f2a-8208-e4d33ac6d9f4.json  kernel-6dd1c4e8-5b63-4134-8496-7287c716cbca.json  kernel-6e12deb1-529e-480e-adcd-c4c95c603485.json  nbserver-10092-open.html  (+38 more)
0809main_try/torch/lib/: XNNPACK.lib  _C.lib  clog.lib  cpuinfo.lib  pthreadpool.lib
0809main_try/zope.interface-5.3.0.dist-info/: RECORD  direct_url.json
Core/Inc/: dma.h  gpio.h  i2c.h  main.h  sdio.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usart.h
Core/Src/: dma.c  freertos.c  freertos_static.c  gpio.c  i2c.c  main.c  sdio.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscalls.c  tim.c  usart.c
FATFS/App/: fatfs.c  fatfs.h  fatfs.h_save
HardWare/area/: area.c  area.h
HardWare/e2prom/: e2prom.c  e2prom.h
HardWare/ec20/: ec20.c  ec20.h
HardWare/led/: led.c  led.h
HardWare/logic/: logic.c  logic.h
HardWare/oled/: bmp.h  oled.c  oled.h  oledfont.h
HardWare/sensor/: sensor.c  sensor.h
MDK-ARM/: MYPLAY.build_log.htm  MYPLAY.htm  MYPLAY.lnp  MYPLAY.map  MYPLAY.sct  MYPLAY.uvguix.HW  MYPLAY.uvguix.SKR  MYPLAY.uvguix.marvellous  MYPLAY.uvguix.韦文婧  MYPLAY.uvoptx  MYPLAY.uvprojx  MYPLAY_MYPLAY.dep  bsp_driver_sd.crf  bsp_driver_sd.d  cc936.crf  cc936.d  ccsbcs.crf  ccsbcs.d  diskio.crf  diskio.d  diskio_1.crf  diskio_1.d  dma.crf  dma.d  e2prom.crf  e2prom.d  ec20.crf  ec20.d  exfuns.crf  exfuns.d  fatfs.crf  fatfs.d  fatfs_1.crf  fatfs_1.d  fattester.crf  fattester.d  ff.crf  ff.d  ff_1.crf  ff_1.d  (+92 more)
MDK-ARM/MYPLAY/: MYPLAY.build_log.htm  MYPLAY.hex  MYPLAY.htm  MYPLAY.lnp  MYPLAY.map  MYPLAY_MYPLAY.dep  bsp_driver_sd.crf  bsp_driver_sd.d  cc936.crf  cc936.d  diskio.crf  diskio.d  dma.crf  dma.d  e2prom.crf  e2prom.d  ec20.crf  ec20.d  fatfs.crf  fatfs.d  ff.crf  ff.d  ff_gen_drv.crf  ff_gen_drv.d  gpio.crf  gpio.d  i2c.crf  i2c.d  led.crf  led.d  logic.crf  logic.d  main.crf  main.d  oled.crf  oled.d  sd_diskio.crf  sd_diskio.d  sdio.crf  sdio.d  (+55 more)
MDK-ARM/RTE/_MYPLAY/: RTE_Components.h
MXTmpFiles/: fatfs_HalInit.tmp  fatfs_ext_vars.tmp  fatfs_inc.tmp  fatfs_vars.tmp  license.tmp  rtos_default_thread.tmp  rtos_obj_creat.tmp  rtos_pfp.tmp  rtos_threads.tmp  rtos_vars.tmp
cmake/: arm-none-eabi-gcc.cmake
ldscripts/: STM32F429IGTX_FLASH.ld
startup/: startup_stm32f429xx.c
(+4 files in other folders)
